Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,6 @@ permalink: "pretty"
 collections:
   projects:
     output: "true"
-    permalink: "/project/:path/"
+    permalink: "/:path/"
 
 exclude: ['node_modules', 'package.json']
