--- a/projects.json
+++ b/projects.json
@@ -10,13 +10,13 @@ layout: null
 				"url": "{{project.site.url}}",
 				"url_title": "{{project.site.url_title}}"
 			},
-			"featured_image_path": "{{project.featured_image_path}}",
-			"featured_video_path": "{{project.featured_video_path}}",
+			"featured_image_path": "{{project.featured_image_path | absolute_url }}",
+			"featured_video_path": "{{project.featured_video_path | absolute_url }}",
 			"published_date": "{{project.published_date}}",
 			"gallery": [
 				{% for image in project.gallery %}
 					{
-						"url": "{{image.image_url}}",
+						"url": "{{image.image_url | absolute_url }}",
 						"alt": "{{image.image_alt}}"
 					}{% unless forloop.last %},{% endunless %}
 				{% endfor %}
