--- a/projects.json
+++ b/projects.json
@@ -12,7 +12,9 @@ layout: null
 			},
 			"featured_image_path": "{{site.url}}/{{project.featured_image_path }}",
 			"featured_video_path": "{{site.url}}/{{project.featured_video_path }}",
-			"published_date": "{{project.published_date}}",
+			"published_date": "{{project.published_date}}"
+			{% if project.gallery.length > 0 %}
+			,
 			"gallery": [
 				{% for image in project.gallery %}
 					{
@@ -21,6 +23,7 @@ layout: null
 					}{% unless forloop.last %},{% endunless %}
 				{% endfor %}
 			]
+			{% endif %}
 		}{% unless forloop.last %},{% endunless %}
 	{% endfor %}
 ]
