Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Hector Romo"
 #url: "http:localhost:4000"
-url: "www.hectorromo.com"
+url: "https://www.hectorromo.com"
 baseurl: ""
 encoding: "utf-8"
 markdown: "kramdown"
