--- a/package.json
+++ b/package.json
@@ -4,11 +4,24 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "budo js/app.js:js/bundle.js -p 3000 --no-debug -- -b bundle-collapser/plugin -g unassertify -g yo-yoify -g uglifyify"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "canvid": "^1.6.0"
+    "browser-sync": "^2.18.13",
+    "budo": "^10.0.4",
+    "bundle-collapser": "^1.3.0",
+    "canvid": "^1.6.0",
+    "child_process": "^1.0.2",
+    "choo": "^6.3.0",
+    "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-unassert": "^1.0.1",
+    "uglifyify": "^4.0.4",
+    "unassertify": "^2.0.4",
+    "yo-yoify": "^4.0.0"
   }
 }
